fix scrollbar

--- a/frontend/ui/components/Space/NearProtocol/Network/Calls/Call/Call.module.scss
+++ b/frontend/ui/components/Space/NearProtocol/Network/Calls/Call/Call.module.scss
@@ -6,11 +6,12 @@
   overflow-y: auto;
   height: 100%;
   overflow-x: auto;
+  scrollbar-gutter: stable;
 }
 
 @media (min-width: 1000px) {
   .call {
     overflow-x: hidden;
-    scrollbar-gutter: stable
+    scrollbar-gutter: stable;
   }
 }
