--- a/frontend/ui/components/Space/NearProtocol/Network/Calls/Call/Result/Result.module.scss
+++ b/frontend/ui/components/Space/NearProtocol/Network/Calls/Call/Result/Result.module.scss
@@ -3,11 +3,11 @@
 
 .result {
   position: relative;
-  width: calc(100% - 32px);
+  width: calc(100% - 26px);
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 16px 16px 82px 16px;
+  padding: 16px 6px 82px 16px;
 }
 
 .container {
