--- a/frontend/ui/components/Space/NearProtocol/Network/Calls/Call/methods/_general/BlockTarget/BlockTarget.module.scss
+++ b/frontend/ui/components/Space/NearProtocol/Network/Calls/Call/methods/_general/BlockTarget/BlockTarget.module.scss
@@ -5,8 +5,7 @@
   display: flex;
   flex-direction: column;
   padding: 16px;
-  width: 100%;
-  max-width: 566px;
+  width: calc(100% - 32px);
   border: 1px solid $neutral-200;
   border-radius: 16px;
 }
